@@ -101,7 +101,7 @@ _why3()
             return 0
             ;;
         --style)
-            COMPREPLY=( $( compgen -W 'simple jstree' -- "$cur" ) )
+            COMPREPLY=( $( compgen -W 'simpletree table' -- "$cur" ) )
             return 0
             ;;
         session)
