@@ -8,6 +8,7 @@ Tools
   o add a command-line option --extra-expl-prefix to specify
     additional possible prefixes for VC explanations.  (Available for
     why3 commands "prove" and "ide".)
+  * removed "jstree" style from the "session" command
 
 Transformations
   * All split transformations respect the "stop_split" label now.
